--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,8 +1,10 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/Julicraft44/ShortCommands
 build-by-default: true
 branches:
-- main
+- master
 projects:
   ShortCommands:
     path: ""
+    lint:
+      phpstan: false
 ...
