--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,7 +1,7 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/Julicraft44/ShortCommands
 build-by-default: true
 branches:
-- master
+- main
 projects:
   ShortCommands:
     path: ""
